Update Starwar-api .ipynb

--- a/Project-08-Python/Starwar-api .ipynb
+++ b/Project-08-Python/Starwar-api .ipynb
@@ -24,29 +24,28 @@
   {
    "cell_type":"code",
    "source":[
-    "\n",
-    "from requests import get \n",
-    "import pandas as pd\n",
-    "\n",
-    "url = \"https:\/\/swapi.dev\/api\/people\/\"\n",
-    "\n",
-    "data = []\n",
-    "\n",
-    "for i in range(5):\n",
-    "    index = i + 1\n",
-    "    new_url = url + str(index)\n",
-    "    res = get(new_url)\n",
-    "    json_data = res.json()\n",
-    "    prep_data = {\n",
-    "        \"name\" : json_data[\"name\"],\n",
-    "        \"height\" : json_data[\"height\"],\n",
-    "        \"mass\" : json_data[\"mass\"],\n",
-    "        \"birth_year\" : json_data[\"birth_year\"],\n",
-    "        \"url\" : json_data[\"homeworld\"]\n",
-    "    }\n",
-    "    data.append(prep_data)\n",
-    "\n",
-    "df = pd.DataFrame(data)\n",
+     "from requests import get ",
+    "import pandas as pd",
+    "",
+    "url = \"https://swapi.dev/api/people/\"",
+    "",
+    "data = []",
+    "",
+    "for i in range(5):",
+    "    index = i + 1",
+    "    new_url = url + str(index)",
+    "    res = get(new_url)",
+    "    json_data = res.json()",
+    "    prep_data = {",
+    "        \"name\" : json_data[\"name\"],",
+    "        \"height\" : json_data[\"height\"],",
+    "        \"mass\" : json_data[\"mass\"],",
+    "        \"birth_year\" : json_data[\"birth_year\"],",
+    "        \"url\" : json_data[\"homeworld\"]",
+    "    }",
+    "    data.append(prep_data)",
+    "",
+    "df = pd.DataFrame(data)",
     "print(df)"
    ],
    "execution_count":1,
