Update Starwar-api .ipynb

--- a/Project-08-Python/Starwar-api .ipynb
+++ b/Project-08-Python/Starwar-api .ipynb
@@ -24,7 +24,7 @@
   {
    "cell_type":"code",
    "source":[
-     "from requests import get ",
+        "from requests import get ",
     "import pandas as pd",
     "",
     "url = \"https://swapi.dev/api/people/\"",
@@ -47,6 +47,48 @@
     "",
     "df = pd.DataFrame(data)",
     "print(df)"
+]
+
+# Add newline character '\n' after each line
+code_with_newlines = '\n'.join(code) + '\n'
+
+# Print the code with newlines
+print(code_with_newlines)
+This will print your provided code snippet with a newline character (\n) added after each line. Additionally, it will add an extra newline character at the end to ensure there's a newline at the end of the code. If you need any further assistance, feel free to ask!
+
+
+
+User
+add for me please
+ChatGPT
+Certainly! Here's your provided code snippet with a newline character (\n) added after each line:
+
+python
+Copy code
+code = [
+    "from requests import get \n",
+    "import pandas as pd\n",
+    "\n",
+    "url = \"https://swapi.dev/api/people/\"\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "for i in range(5):\n",
+    "    index = i + 1\n",
+    "    new_url = url + str(index)\n",
+    "    res = get(new_url)\n",
+    "    json_data = res.json()\n",
+    "    prep_data = {\n",
+    "        \"name\" : json_data[\"name\"],\n",
+    "        \"height\" : json_data[\"height\"],\n",
+    "        \"mass\" : json_data[\"mass\"],\n",
+    "        \"birth_year\" : json_data[\"birth_year\"],\n",
+    "        \"url\" : json_data[\"homeworld\"]\n",
+    "    }\n",
+    "    data.append(prep_data)\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)\n"
    ],
    "execution_count":1,
    "outputs":[
