--- a/Project-08-Python/Star_Wars_API_(SWAPI).ipynb
+++ b/Project-08-Python/Star_Wars_API_(SWAPI).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "authorship_tag": "ABX9TyPfmEW1S9PveDKAjTLiS+RY",
-      "include_colab_link": true
+      "include_colab_link": false
     },
     "kernelspec": {
       "name": "python3",
