--- a/Project-08-Python/Fight_game_dragonball_api.ipynb
+++ b/Project-08-Python/Fight_game_dragonball_api.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzk0EOP1d3rGA/B6k/PMiZ"
+      "authorship_tag": "ABX9TyOUPDqNcZ1CHSMsHYVNzBrH"
     },
     "kernelspec": {
       "name": "python3",
@@ -46,11 +46,13 @@
         "   \n",
         "# Get a random character for player one\n",
         "player_one = get_random_character()\n",
-        "print(f\"Player One's character is: {player_one[0]}. Your Ki power is: {player_one[1]}\")\n",
+        "# Get a random character for player one\n",
+        "player_one = get_random_character()\n",
+        "print(f\"Player One's character is: {player_one[0]}. Your Ki power is: {player_one[1]:,.0f}\")\n",
         "\n",
         "# Get a random character for player two\n",
         "player_two = get_random_character()\n",
-        "print(f\"Player Two's character is: {player_two[0]}. Your Ki power is: {player_two[1]}\")\n",
+        "print(f\"Player Two's character is: {player_two[0]}. Your Ki power is: {player_two[1]:,.0f}\")\n",
         "\n",
         "def fight(player_one = player_one[1] , player_two = player_two[1]):\n",
         "    if player_one[1] > player_two[1]:\n",
@@ -79,11 +81,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Player One's character is: Tenshinhan. Your Ki power is: 2.400.000\n",
+        "Player One's character is: Tenshinhan. Your Ki power is: 2,400,000\n",
         "\n",
-        "Player Two's character is: Bardock. Your Ki power is: 450.000\n",
+        "Player Two's character is: Bardock. Your Ki power is: 450,000\n",
         "\n",
-        "Player two wins!!\n"
+        "Player one wins!!\n"
       ],
       "metadata": {
         "id": "WVkwPWGbrsVP"
